Update sample-wwf-index 2023-02-27 20_55_53.html
Moved </header> to below the <nav> section

--- a/sample-wwf-index 2023-02-27 20_55_53.html
+++ b/sample-wwf-index 2023-02-27 20_55_53.html
@@ -6,7 +6,7 @@
 
 <body>
 
-<header><h1>WWF</h1></header>
+<header><h1>WWF</h1>
 
 <nav>
   <a href="/work/">Our Work</a> |
@@ -15,6 +15,8 @@
   <a href="/about/">About Us</a>
 </nav>
 
+</header>
+  
 /* Be sure to change the href values to the name of the page you are linking to.
 
 This is a comment, by the way. It won’t show when you load the page in the browser. */
