Update sample-wwf-index 2023-02-27 20_55_53.html

--- a/sample-wwf-index 2023-02-27 20_55_53.html
+++ b/sample-wwf-index 2023-02-27 20_55_53.html
@@ -9,10 +9,10 @@
 <header><h1>WWF</h1>
 
 <nav>
-  <a href="/work/">Our Work</a> |
-  <a href="/species/">Species</a> |
-  <a href="/places/">Places</a> |
-  <a href="/about/">About Us</a>
+  <a href="/work/index.html">Our Work</a> |
+  <a href="/species.html">Species</a> |
+  <a href="/places.html">Places</a> |
+  <a href="/about.html">About Us</a>
 </nav>
 
 </header>
